:bug: [FIX]: Fixed overflow of dropped elements

--- a/styles/main.css
+++ b/styles/main.css
@@ -115,7 +115,7 @@ body {
 .movements__container__item__container {
 	width: 100%;
 	min-height: 75px;
-        height: auto;
+	height: auto;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-auto-rows: min-content;
@@ -188,14 +188,14 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100px;
+	min-height: 100px;
 	cursor: pointer;
 	border-radius: 15px;
 }
 
 .concepts__container__item__text {
 	text-align: justify;
-	padding: 0 1.5rem;
+	padding: 1.5rem 1.5rem;
 }
 
 .images__container__item__img {
